<?xml version="1.0"?>
<package format="2">

    <name>joysticks_quick_start</name>
    <version>0.0.0</version>

    <description>
        The package stores some configuration and launch files for
        Logitech Extreme 3D Pro joystick
    </description>

    <author email="antonovspostbox@gmail.com">Evgeniy Antonov</author>
    <maintainer email="antonovspostbox@gmail.com">Evgeniy Antonov</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>joy_teleop</exec_depend>

    <export>
    </export>

</package>
